--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title> <link rel="stylesheet" href="style.css">
+    
 
 </head>
-<body><header>
-    <ul>
-        <li>escola</li>
-        <li>estudante</li> 
-    </ul>
-</header>
+<body>
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="logo.png" alt="logo da alura start">
+        <ul class="cabecalho-lista">
+            <li class="cabecalho-lista-item">Escola</li>
+            <li class="cabecalho-lista-item">Estudante</li>
+        </ul>
+    </header>
+
     
 </body>
 </html>
