--- a/index.html
+++ b/index.html
@@ -27,9 +27,44 @@
 </body>
 <section class=”estudantes”>
     <h2 class=”estudante-titulo”>Quem são nossos estudantes</h2>
-    <img class=”estudante-imagem” src=”Marcelo.jpeg” alt=”foto do marcelo”>
-    <h3 class=”estudante-nome”>Marcelo</h3>
+    <img class=”estudante-imagem” src="lary.jpg" alt=”foto da Lary”>
+    <h3 class=”estudante-nome”>laryssa</h3>
 </section>
 
 
+<div class="estudante-todos">
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="lary.jpg" alt="foto da lary">
+        <h3 class="estudante-nome">Laryssa</h3>
+        <img class="estudante-icone" src="github.png" alt="icone github">
+        <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
+        <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+    </div>
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="lary.jpg" alt="foto da lary">
+        <h3 class="estudante-nome">Laryssa</h3>
+        <img class="estudante-icone" src="github.png" alt="icone github">
+        <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
+        <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+    </div>
+</div>
+
+
+<div class="estudante-todos">
+    <span></span>
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="lary.jpg" alt="foto do marcelo">
+        <h3 class="estudante-nome">Laryssa</h3>
+        <img class="estudante-icone" src="github.png" alt="icone github">
+        <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
+        <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+    </div>
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="lary.jpg" alt="foto do marcelo">
+        <h3 class="estudante-nome">Laryssa</h3>
+        <img class="estudante-icone" src="github.png" alt="icone github">
+        <img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
+        <img class="estudante-icone" src="instagram.png" alt="icone instagram">
+    </div>
+</div>
 
